# lode

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  dev-local-testing.md  dev-local-testing.zh-CN.md  integration.md  integration.zh-CN.md  lode.example.toml  lode.starter.toml  manifest.example.json  source-adapters.md  source-adapters.zh-CN.md
docs/recipes/: README.md  bun.lode.toml  deno.lode.toml  node.lode.toml
examples/: README.md
examples/bun/: app.ts  lode.toml
examples/go/: .gitignore  go.mod  lode.toml  main.go
examples/rust/: Cargo.toml  lode.toml
examples/rust/src/: main.rs
sdks/: README.md  go.mod  lode.go  lode.rs  lode.ts
src/: authoring.rs  cli.rs  config.rs  download.rs  engine.rs  error.rs  http.rs  idval.rs  install.rs  lib.rs  lock.rs  logging.rs  main.rs  manifest.rs  state.rs  supervisor.rs  verify.rs
src/commands/: mod.rs  restart.rs  rollback.rs  seed.rs  status.rs  update.rs  versions.rs
tests/: .gitignore  README.md  api_smoke.rs  package.json  tsconfig.json
tests/apps/web-bun/: README.md  app.ts  build.sh
tests/apps/web-rust/: Cargo.toml  README.md  build.rs  build.sh
tests/apps/web-rust/src/: main.rs
tests/compose/: .gitignore  README.md  docker-compose.yml
tests/compose/fileserver/: Dockerfile
tests/compose/lodetest/: Cargo.toml
tests/compose/lodetest/src/: main.rs
tests/compose/svc-bun/: lode.toml
tests/compose/svc-restart/: lode.toml
tests/compose/svc-rust/: lode.toml
tests/src/: 01-bootstrap.test.ts  02-passthrough.test.ts  03-update-check.test.ts  04-update-auto.test.ts  05-signature.test.ts  06-readiness.test.ts  07-graceful-stop.test.ts  08-restart-off.test.ts  09-restart-always.test.ts  10-restart-on-failure.test.ts  11-update-on-exit.test.ts  12-auto-update-running.test.ts  13-rollback.test.ts  14-path-traversal.test.ts  15-download-cache.test.ts  16-staged-update.test.ts  17-keep-alive.test.ts  18-corrupt-state.test.ts  19-latest-target.test.ts  20-spawnfail-rollback.test.ts  21-paused-recovery.test.ts  22-prepare-timeout.test.ts  23-command-resolution.test.ts  24-bootstrap-signal.test.ts  25-config-reload.test.ts  26-hold.test.ts
tests/src/fixtures/: app.sh
tests/src/helpers/: app.ts  harness.ts  lode.ts  manifestServer.ts  sign.ts  util.ts
tests/src/integration/: compose.test.ts
